--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -53,10 +53,14 @@ ol {
 
 .name {
     text-shadow: 0px 2px 4px gray;
+    margin-bottom: 30px;
 }
 
 .description {
-    width: 500px;
+    margin-right: 15px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #E0EBFE;
 }
 
 h2 {
@@ -147,20 +151,25 @@ ul {
 
 }
 
-@media screen and (max-width: 860px) {
-    .contacts-container {
-        margin: 48px 0 0 10px;
-    }
-
-}
-
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 870px) {
     .wrapper {
         display: flex;
         flex-direction: column;
         /* margin: 0 auto; */
         align-items: center;
     }
+}
+@media screen and (max-width: 870px) {
+    .sidebar {
+       margin-top: 0px;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .contacts-container {
+        margin: 48px 0 0 10px;
+    }
+
 }
 
 @media screen and (max-width: 830px) {
@@ -173,7 +182,9 @@ ul {
 
 @media screen and (max-width: 830px) {
     .description {
+        align-items: center;
         width: 100%;
+        margin-right: 10px;
     }
 }
 
